# package-manager

./: .gitignore  .travis.yml  COMPILE.md  Cargo.toml  README.md  clippy.toml  deps  manifest.toml  notes.md  notes.txt  profile.sh  rust-toolchain  solver-notes.txt  types.txt
benches/: benches.rs
client/: Cargo.toml  profile.sh
client/src/: auth.rs  config.rs  error.rs  files.rs  git.rs  grammar.pest  io.rs  lockfile.rs  main.rs  manifest.rs  manifest_grammar.rustpeg  manifest_parser.rs  manifest_parser_error.rs  path.rs  pest_grammar.pest  pest_parser.rs  project.rs  registry.rs  resolve.rs  test.rs
client/src/command/: install.rs  login.rs  mod.rs  publish.rs  search.rs  test.rs
client/src/solver/: adapter.rs  constraints.rs  error.rs  failure.rs  mappable.rs  mod.rs  path.rs  solution.rs  test_helpers.rs
client/test/: cargo.rmp
client/test/import-cargo/: index.js
doc/: notes.txt
lib/: Cargo.toml
lib/benches/: solver.rs
lib/src/: constraint.rs  dependencies.rs  index.rs  lib.rs  log.rs  manifest.rs  package.rs  path.rs  publication_request.rs  test_helpers.rs  version.rs
lib/src/solver/: adapter.rs  constraints.rs  error.rs  failure.rs  mappable.rs  mod.rs  path.rs  solution.rs  test_helpers.rs
server/: Cargo.toml  README.md  tests.txt
server/migrations/0001_tables/: up.sql
server/migrations/2017-10-09-174845_create_files/: up.sql
server/migrations/20170818142649_create_users/: up.sql
server/migrations/20170818143705_create_login_sessions/: down.sql  up.sql
server/migrations/20170818171508_create_packages/: down.sql  up.sql
server/migrations/20170912171351_package_search/: down.sql  up.sql
server/migrations/2018-08-31-155414_files/: up.sql
server/src/: auth.rs  error.rs  file.rs  github.rs  gitlab.rs  index.rs  main.rs  package.rs  schema.rs  search.rs  store.rs  test.rs  upload.rs  user.rs
src/: main.rs
src/core/: constraint.rs  error.rs  index.rs  lazy.rs  lib.rs  list.rs  literal_helpers.rs  lockfile.rs  log.rs  manifest.rs  registry.rs  solver.rs  test.rs  test_helpers.rs  version.rs
src/core/solver/: adapter.rs  conflict.rs  constraints.rs  error.rs  failure.rs  mappable.rs  mod.rs  path.rs  solution.rs  test.rs  test_helpers.rs
test/: cargo.rmp  from-cargo.js  small.json
test/import-cargo/: .gitignore  index.js  package.json
