[package]
authors = ["Bodil Stokke <bodil@bodil.org>"]
name = "package-manager"
version = "1.0.0"

[lib]
name = "package_manager"
path = "src/core/lib.rs"

[[bin]]
name = "pm"
path = "src/bin/main.rs"

[dependencies]
docopt = "^0.7"
toml = "^0.3.1"
rustc-serialize = "^0.3"
serde = "^0.9.8"
serde_derive = "^0.9.8"
serde_json = "^0.9.8"
semver-parser = "^0.7.0"
nom = { version = "^2.1", features = ["regexp"] }
regex = "^0.2"

[replace]
"nom:2.1.0" = { git = 'https://github.com/Geal/nom' }
