[package]
authors = ["Bodil Stokke <bodil@bodil.org>"]
name = "package-manager"
version = "1.0.0"

[lib]
name = "package_manager"
path = "src/core/lib.rs"

[[bin]]
name = "pm"
path = "src/bin/main.rs"

[dependencies]
docopt = "0.8"
toml = "0.4"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
semver-parser = "0.7"
nom = "2.2"
regex = "0.2"
quick-error = "1.2"
license-exprs = "1.3.0"
im = "4.0.1"
rmp-serde = "0.13.3"

[profile.bench]
debug = true # for flamegraphs
