[package]
authors = [
    "Bodil Stokke <bodil@bodil.org>",
    "Jo Liss <joliss42@gmail.com>",
]
name = "pm"
version = "0.0.0"

[[bin]]
name = "pm"
path = "src/main.rs"

[dependencies]
brotli = "2.5.0"
console = "0.6.1"
data-encoding = "2.1.1"
dirs = "1.0.3"
docopt = "1.0.0"
failure = "0.1.2"
failure_derive = "0.1.2"
futures = "0.1.21"
glob = "0.2.11"
hyper = "0.11.27" # needs update
indicatif = "0.9.0"
pest = "=1.0.0-beta.17" # needs update
pest_derive = "=1.0.0-beta.17" # needs update
quick-error = "1.2.2"
rand = "0.5.3"
reqwest = "0.8.6"
rmp-serde = "0.13.7"
serde = "1.0.69"
serde_derive = "1.0.69"
serde_json = "1.0.22"
tar = "0.4.16"
toml = "0.4.6"
url = "1.7.0"
webbrowser = "0.3.1"

[dependencies.im]
version = "11.0.1"
features = ["serde"]

[dependencies.git2]
default-features = false
version = "0.7.1"

[dependencies.pm_lib]
path = "../lib"

[dev-dependencies]
matches = "0.1.8"
