[package]
authors = [
    "Bodil Stokke <bodil@bodil.org>",
    "Jo Liss <joliss42@gmail.com>",
]
name = "pm_lib"
version = "0.0.0"
edition = "2018"

[dependencies]
nom = "2.2.1" # needs update
quick-error = "1.2.2"
rmp-serde = "0.14.0"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
im-rc = "14.0.0"
failure = "0.1.5"
failure_derive = "0.1.5"

[dev-dependencies]
pretty_assertions = "0.6.1"

[lib]
name = "pm_lib"
path = "src/lib.rs"
