[package]
authors = [
    "Bodil Stokke <bodil@bodil.org>",
    "Jo Liss <joliss42@gmail.com>",
]
name = "pm_server"
version = "0.0.0"

[dependencies]
brotli = "2.5.0"
data-encoding = "2.1.1"
dotenv = "0.13.0"
quick-error = "1.2.2"
reqwest = "0.8.6"
rmp-serde = "0.13.7"
rocket = "0.3.14"
rocket_codegen = "0.3.14"
rocket_contrib = "0.3.14"
serde = "1.0.69"
serde_derive = "1.0.69"
serde_json = "1.0.22"
tar = "0.4.16"
url = "1.7.0"
diesel_migrations = "1.3.0"

[dependencies.diesel]
features = [
    "postgres",
    "32-column-tables",
]
version = "1.3.2" # needs update

[dependencies.im]
version = "12.0.0"
features = ["serde"]

[dependencies.pm_lib]
path = "../lib"

[dev-dependencies]
pretty_assertions = "0.5"
