[package]
authors = [
    "Bodil Stokke <bodil@bodil.org>",
    "Jo Liss <joliss42@gmail.com>",
]
name = "pm_server"
version = "0.0.0"
edition = "2018"

[dependencies]
brotli = "3.3.0"
data-encoding = "2.1.2"
dotenv = "0.15.0"
failure = "0.1.5"
failure_derive = "0.1.5"
quick-error = "1.2.2"
reqwest = "0.9.10"
rmp-serde = "0.14.0"
rocket = "0.4.0"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
tar = "0.4.20"
url = "2.1.0"
diesel_migrations = "1.4.0"

[dependencies.diesel]
features = [
    "postgres",
    "32-column-tables",
]
version = "1.4.1"

[dependencies.im]
version = "14.0.0"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.4.0"
features = ["diesel_postgres_pool"]

[dependencies.pm_lib]
path = "../lib"

[dev-dependencies]
pretty_assertions = "0.6.1"
